crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__attachment-order.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="order" class="cell markdown">
Two attachments, referenced out of key order:

[[File:order-beta.png|beta]]

[[File:order-alpha.png|alpha]]

</div>
