crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__attachment.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="figure" class="cell markdown">
An embedded attachment:

[[File:figure-diagram.png|a diagram]]

</div>
