crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__code-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="render" class="cell code" data-execution_count="4">
<syntaxhighlight lang="python">show_table()</syntaxhighlight>
<div class="output display_data">
<table><tr><td>cell</td></tr></table>
</div>

</div>
