crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__code-image-metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="sized-plot" class="cell code" data-execution_count="7">
<syntaxhighlight lang="python">draw()</syntaxhighlight>
<div class="output display_data">
[[File:ddd8a63b8957c29356d1015e6040f47158d26c1d.png|320x240px]]

</div>

</div>
