crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__definition-marker-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="deffold" class="cell markdown">
A line of prose

<nowiki></nowiki>: not a definition list in this dialect

</div>
